# lol-compare

./: .dockerignore  README.md  docker-compose.yaml  package.json
.github/workflows/: ci.yaml  deploy.yaml  formatting.yaml
.husky/: pre-commit
backend/: .dockerignore  .gitignore  Dockerfile  config.py  dependencies.py  main.py  pyproject.toml  schemas.py
backend/app/: config.py  dependencies.py  main.py
backend/app/routers/: __init__.py  analyse.py  pro_stats.py  transform.py  warmup.py
backend/app/services/: coords_service.py  riot_service.py  umap_service.py
backend/assets/: scaler.joblib  umap-coords.joblib  umap-model.joblib
backend/routers/: __init__.py  matches.py  pro_stats.py  transform.py
cdk/: package-lock.json
cdk/lib/: backend-stack.ts  cdk-stack.ts  certificate-stack.ts  frontend-stack.ts
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: chart-container.tsx  echarts-scatter.tsx  scatter-plot.tsx
frontend/src/constants/: constants.ts
frontend/src/constants/router/: router.tsx  routes.tsx
frontend/src/hooks/: useChartDomain.ts
frontend/src/pages/: home-page.tsx
