[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.0"
gunicorn = "^23.0.0"
setuptools = "^80.9.0"
uvicorn = "^0.38.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
