[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.0"
gunicorn = "^23.0.0"
setuptools = "^80.9.0"
uvicorn = "^0.38.0"
requests = "^2.32.5"
dotenv = "^0.9.9"
pydantic = "^2.12.3"
boto3 = "^1.40.62"
joblib = "^1.5.2"
pydantic-settings = "^2.11.0"
numpy = "^2.3.4"
umap-learn = "^0.5.9.post2"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
